<resources>
    <string name="app_name">Notes Vortex</string>
    <string name="notes_vortex">Notes Vortex</string>
    <string name="manage_your_daily_nactivity_so_easy">Manage Your Daily\nActivity So Easy</string>
    <string name="this_smart_tool_is_designed_to_help_you_nmanager_your_daily_activity">This smart tool is designed to help you\nmanager your daily activity</string>
    <string name="get_started">Get Started</string>
    <string name="create_nnew_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">
        <u>Login</u>
    </string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_naccount">Login Account</string>
    <string name="create_account_u">
        <u>Create Account</u>
    </string>
    <string name="add_new_note">Add New Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete Note</string>
    <string name="logout">Logout</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_really_want_to_n_logout">Do You Really Want To \n Logout ?</string>
</resources>