<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/filter_dialog_background">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_n_logout"
        android:textAllCaps="true"
        android:textColor="@color/main_color"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view18"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/add_button_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view18"
        app:layout_constraintTop_toBottomOf="@+id/view18"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/add_button_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="@+id/view18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yesButton"
        app:layout_constraintTop_toTopOf="@+id/yesButton"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>